--- a/package.json
+++ b/package.json
@@ -34,5 +34,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-transform-private-property-in-object": "^7.24.7",
+    "daisyui": "^4.12.10",
+    "tailwindcss": "^3.4.6"
   }
 }
