--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.0",
     "react-scripts": "5.0.1",
+    "react-tooltip": "^5.28.0",
     "styled-components": "^6.1.11",
     "web-vitals": "^2.1.0"
   },
