--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "crypto-browserify": "^3.12.0",
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.12",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-tooltip": "^5.28.0",
     "styled-components": "^6.1.11",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
