--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@stomp/stompjs": "^7.0.0",
     "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/supabase-js": "^2.45.1",
     "@testing-library/jest-dom": "^5.14.1",
@@ -17,6 +18,7 @@
     "react-router-dom": "^6.25.0",
     "react-scripts": "^5.0.1",
     "react-tooltip": "^5.28.0",
+    "sockjs-client": "^1.6.1",
     "styled-components": "^6.1.11",
     "web-vitals": "^2.1.0"
   },
