chatroom not working

--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.12",
     "jwt-decode": "^4.0.0",
+    "net": "^1.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.0",
     "react-scripts": "^5.0.1",
     "react-tooltip": "^5.28.0",
     "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "styled-components": "^6.1.11",
     "web-vitals": "^2.1.0"
   },
