--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "axios": "^1.7.5",
     "crypto-browserify": "^3.12.0",
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.12",
