--- a/package.json
+++ b/package.json
@@ -3,20 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ai-sdk/openai": "^0.0.62",
     "@stomp/stompjs": "^7.0.0",
     "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/supabase-js": "^2.45.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "axios": "^1.7.5",
+    "ai": "^3.4.1",
+    "axios": "^1.7.7",
     "crypto-browserify": "^3.12.0",
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.12",
+    "groq": "^3.57.4",
+    "groq-sdk": "^0.7.0",
     "jwt-decode": "^4.0.0",
     "net": "^1.0.2",
+    "openai": "^4.63.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-password-checklist": "^1.8.0",
     "react-router-dom": "^6.25.0",
     "react-scripts": "^5.0.1",
     "react-stomp": "^5.1.0",
