--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@ai-sdk/openai": "^0.0.62",
+    "@fontsource/cascadia-code": "^4.2.1",
     "@stomp/stompjs": "^7.0.0",
     "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/supabase-js": "^2.45.1",
