--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.2.1",
     "ai": "^3.4.1",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.4",
     "crypto-browserify": "^3.12.0",
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.12",
@@ -22,6 +23,7 @@
     "net": "^1.0.2",
     "openai": "^4.63.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-password-checklist": "^1.8.0",
     "react-router-dom": "^6.25.0",
